# ea

./: .gitignore  CLAUDE.md  Makefile  README.md  ea.py  pyproject.toml
docs/: changelog.md  install-macos.md  plan.md  roadmap.md  state-machine.md  time-qualifier-support.md
docs/launchd/: com.ea.poll.plist
ea/: auth.py  calendar.py  classifier.py  config.py  digest.py  gmail.py  llm_util.py  log.py  network.py  poll.py  responder.py  runner.py  scheduler.py  sim.py  state.py  triggers.py
ea/parser/: date_normalizer.py  meeting_parser.py
scripts/: install-launchd.sh
testdata/: 01_simple_chat.json  01_simple_chat.txt  02_vague_no_time.json  02_vague_no_time.txt  03_multi_turn_thread.json  03_multi_turn_thread.txt  04_multiple_time_options.json  04_multiple_time_options.txt  05_not_a_meeting.txt  06_urgent_sameday.json  06_urgent_sameday.txt  07_block_time.json  07_block_time.txt
tests/: fake_gmail.py  test_allday.py  test_confirmation_reply.py  test_date_normalizer.py  test_digest.py  test_dismiss.py  test_duration_defaults.py  test_external_reply.py  test_footer.py  test_llm_util.py  test_pass1_error.py  test_phase1.py  test_pipeline.py  test_responder_helpers.py  test_scheduler.py  test_security.py  test_state_machine.py  test_subject_trigger.py
